{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "c52b429f-fd69-9473-014f-72a52f063b1e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:subnet/subnet-b923bbc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-b923bbc3",
            "map_public_ip_on_launch": true,
            "owner_id": "270074865685",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/wes-eks": "shared",
              "kubernetes.io/cluster/wes-eks-2": "shared",
              "kubernetes.io/cluster/wes-eks-4": "shared"
            },
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:vpc/vpc-fbd9e393",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-cb4d4aa3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-77657a1f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fbd9e393",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-baa567d1",
            "owner_id": "270074865685",
            "state": "available",
            "tags": {
              "Name": "default-VPC",
              "kubernetes.io/cluster/wes-eks": "shared",
              "kubernetes.io/cluster/wes-eks-4": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rke2-server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0495cbf65907a24fd",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-0d25f011bdb112973",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d25f011bdb112973",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043e293741cbe289d",
            "private_dns": "ip-172-31-44-136.us-east-2.compute.internal",
            "private_ip": "172.31.44.136",
            "public_dns": "ec2-13-58-107-88.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.107.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c5fcfec7a6aa45bd",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrke2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fa02c1b6",
            "tags": {
              "Leader": "true",
              "Name": "hgrke2-server-0",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-080179b7552e5148a"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0495cbf65907a24fd",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-0b5f5a53f77287fba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5f5a53f77287fba",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0538c0599c78e4be8",
            "private_dns": "ip-172-31-36-210.us-east-2.compute.internal",
            "private_ip": "172.31.36.210",
            "public_dns": "ec2-3-137-148-240.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.148.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09958b2c60f1f48cb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrke2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fa02c1b6",
            "tags": {
              "Leader": "false",
              "Name": "hgrke2-server-1",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-080179b7552e5148a"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0495cbf65907a24fd",
            "arn": "arn:aws:ec2:us-east-2:270074865685:instance/i-01b46fdd0ebac4e6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b46fdd0ebac4e6d",
            "instance_state": "running",
            "instance_type": "m5.8xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05933e3407b9de887",
            "private_dns": "ip-172-31-34-113.us-east-2.compute.internal",
            "private_ip": "172.31.34.113",
            "public_dns": "ec2-3-137-157-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.157.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07210b93176ad9259",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hgrke2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fa02c1b6",
            "tags": {
              "Leader": "false",
              "Name": "hgrke2-server-2",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-080179b7552e5148a"
            ]
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rke2-master-nlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke2-nlb/9bc9982e952461b8",
            "arn_suffix": "net/hgrke2-nlb/9bc9982e952461b8",
            "dns_name": "hgrke2-nlb-9bc9982e952461b8.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke2-nlb/9bc9982e952461b8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hgrke2-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-42bf9d2a"
              },
              {
                "subnet_id": "subnet-b923bbc3"
              },
              {
                "subnet_id": "subnet-fa02c1b6"
              }
            ],
            "subnets": [
              "subnet-42bf9d2a",
              "subnet-b923bbc3",
              "subnet-fa02c1b6"
            ],
            "vpc_id": "vpc-fbd9e393",
            "zone_id": "ZLMOA37VPKANP"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rke2-master-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke2-nlb/9bc9982e952461b8/5ed2cce0b5c9a8a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke2-nlb/9bc9982e952461b8/5ed2cce0b5c9a8a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke2-nlb/9bc9982e952461b8",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rke2-master-supervisor-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke2-nlb/9bc9982e952461b8/434a7b2ca27587df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:listener/net/hgrke2-nlb/9bc9982e952461b8/434a7b2ca27587df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:loadbalancer/net/hgrke2-nlb/9bc9982e952461b8",
            "port": 9345,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rke2-master-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
            "arn_suffix": "targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
            "lambda_multi_value_headers_enabled": false,
            "name": "hgrke2-nlb-tg",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rke2-master-supervisor-nlb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
            "arn_suffix": "targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 30,
                "port": "9345",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
            "lambda_multi_value_headers_enabled": false,
            "name": "hgrke2-nlb-supervisor-tg",
            "port": 9345,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rke2-nlb-attachement",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61-20201014193030338200000004",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
            "target_id": "i-0d25f011bdb112973"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61-20201014193030634300000007",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
            "target_id": "i-0b5f5a53f77287fba"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61-20201014193030284000000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-tg/8ffed8277b1e1b61",
            "target_id": "i-01b46fdd0ebac4e6d"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rke2-nlb-supervisor-attachement",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d-20201014193030366400000005",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
            "target_id": "i-0d25f011bdb112973"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d-20201014193031978500000008",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
            "target_id": "i-0b5f5a53f77287fba"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d-20201014193030519000000006",
            "port": 9345,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:270074865685:targetgroup/hgrke2-nlb-supervisor-tg/ddbc204fcf501a1d",
            "target_id": "i-01b46fdd0ebac4e6d"
          },
          "dependencies": [
            "aws_instance.rke2-server",
            "aws_lb.rke2-master-nlb",
            "aws_lb_target_group.rke2-master-supervisor-nlb-tg",
            "aws_route53_record.www",
            "aws_security_group.rke2-all-open"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rke2-all-open",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270074865685:security-group/sg-080179b7552e5148a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080179b7552e5148a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hgrke2-sg",
            "name_prefix": "",
            "owner_id": "270074865685",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-fbd9e393"
          }
        }
      ]
    }
  ]
}